--- a/src/HTMLProducer/HTMLProducer.csproj
+++ b/src/HTMLProducer/HTMLProducer.csproj
@@ -36,8 +36,12 @@
     <ApplicationIcon>Designbolts-Embossed-Social-HTML5.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FastColoredTextBox">
+      <HintPath>..\..\..\..\Desktop\FastColoredTextBox.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
