--- a/src/HTMLProducer/HTMLProducer.csproj
+++ b/src/HTMLProducer/HTMLProducer.csproj
@@ -39,6 +39,7 @@
     <Reference Include="FastColoredTextBox">
       <HintPath>..\..\..\..\Desktop\FastColoredTextBox.dll</HintPath>
     </Reference>
+    <Reference Include="SkinSoft.VisualStyler, Version=2.4.0.0, Culture=neutral, PublicKeyToken=0fda9f423e1d9830, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
